--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/william-abboud/what-to-wear#readme",
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
     "browserslist": "^4.16.5",
     "css-loader": "^5.2.4",
     "html-webpack-plugin": "^5.3.1",
