Added babel related plugins and css prod plugins

--- a/package.json
+++ b/package.json
@@ -19,12 +19,23 @@
   },
   "homepage": "https://github.com/william-abboud/what-to-wear#readme",
   "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.13.13",
+    "@babel/plugin-transform-react-inline-elements": "^7.12.13",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/preset-react": "^7.13.13",
     "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "browserslist": "^4.16.5",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.4",
+    "css-minimizer-webpack-plugin": "^2.0.0",
     "cssnano": "^5.0.2",
     "cssnano-preset-default": "^5.0.1",
+    "extract-css-chunks-webpack-plugin": "^4.9.0",
     "html-webpack-plugin": "^5.3.1",
     "postcss": "^8.2.13",
     "postcss-css-variables": "^0.17.0",
