--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "postcss-nested": "^5.0.5",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^2.0.0",
+    "ts-loader": "^9.1.2",
+    "typescript": "^4.2.4",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
     "webpack-dashboard": "^3.3.1",
@@ -52,6 +54,9 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "core-js": "^3.12.1",
+    "normalize.css": "^8.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
