--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,18 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
+    "module": "esnext",
+    "target": "es6",
+    "outDir": "./dist",
+    "declaration": true,
+    "sourceMap": true,
+    "strict": true,
     "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
-    "sourceMap": true
   },
   "include": ["src"]
 }
